kubernetes/deployment/client.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: broker-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: broker-client
  template:
    metadata:
      labels:
        app: broker-client
    spec:
      containers:
        - name: app-clinet
          image: 9931063/easy-broker:1.3.6
          # image: 9931063/broker:1.0.0
          resources:
            requests:
              cpu: "100m"
              memory: "200Mi"
            limits:
              cpu: "200m"
              memory: "300Mi"
          imagePullPolicy: Always
          tty: true
          stdin: true
          ports:
            - containerPort: 800
            - containerPort: 5000
          env:
            - name: POSTGRES_USER
              value: parham
            - name: POSTGRES_PASSWORD
              value: ParhamBootcamp8102
            - name: POSTGRES_DB
              value: broker
