kubernetes/deployment/prome.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus-pod
  template:
    metadata:
      labels:
        app: prometheus-pod
    spec:
      containers:
        - name: prometheus
          image: prom/prometheus
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
          ports:
            - containerPort: 9090
          args:
            - "--config.file=/etc/prometheus/prometheus.yaml"
            - "--storage.tsdb.path=/prometheus"  
          volumeMounts:
              - name: prometheus-config-volume
                mountPath: /etc/prometheus
      volumes:
        - name: prometheus-config-volume
          configMap:
            name: prometheus-config
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: prometheus-config
data:
  prometheus.yaml: |
    global:
      scrape_interval: 15s
      evaluation_interval: 15s
    scrape_configs:
      - job_name: prometheus
        static_configs:
          - targets: ['localhost:9090']
      - job_name: app
        metrics_path: /metrics
        dns_sd_configs:
        - names:
          - 'broker-service.default.svc.cluster.local'
