kubernetes/deployment/scylla.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scylla-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scylla-pod
  template:
    metadata:
      labels:
        app: scylla-pod
    spec:
      containers:
        - name: scylla
          image: scylladb/scylla
          ports:
          - containerPort: 9042
          - containerPort: 7000
          - containerPort: 7001
          - containerPort: 7199
          volumeMounts:
            - name: scylla-data
              mountPath: /var/lib/scylla
      volumes:
        - name: scylla-data
          emptyDir: {}
