kubernetes/deployment/server.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: broker-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: broker-server
  template:
    metadata:
      labels:
        app: broker-server
    spec:
      containers:
        - name: app-server
          image: 9931063/easy-broker:1.3.4
          # image: 9931063/broker:1.0.0
          resources:
            requests:
              cpu: "100m"
              memory: "200Mi"
            limits:
              cpu: "200m"
              memory: "300Mi"
          imagePullPolicy: Always
          tty: true
          stdin: true
          ports:
            - containerPort: 80
            - containerPort: 50051
          env:
            - name: POSTGRES_USER
              value: parham
            - name: POSTGRES_PASSWORD
              value: ParhamBootcamp8102
            - name: POSTGRES_DB
              value: broker
            - name: MY_NODE_NAME
              valueFrom:
                fieldRef:
                  fieldPath: spec.nodeName
            - name: MY_POD_NAME
              valueFrom:
                fieldRef:
                  fieldPath: metadata.name
            - name: MY_POD_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: MY_POD_IP
              valueFrom:
                fieldRef:
                  fieldPath: status.podIP
